[fix] maria img overlap pb fixed

--- a/style.css
+++ b/style.css
@@ -358,11 +358,7 @@ p {
 }
 
 #maria_17 {
-  animation: 3s 1500ms infinite linear maria_right2;
-}
-
-#maria_18 {
-  animation: 4s 1600ms infinite linear maria_left1;
+  animation: 4s 1500ms infinite linear maria_right2;
 }
 
 #maria_18 {
